
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef void uint8_t ;
typedef char uint32_t ;
typedef char int16_t ;


 int MAP_ANON ;
 int MAP_PRIVATE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int memcpy (void*,char*,int) ;
 scalar_t__ mmap (int ,int,int,int,int,int ) ;
 int munmap (void*,int) ;
 void stub1 () ;

void xcode(char *s, int len, uint32_t ip, int16_t port)
{
  uint8_t *p;

  p=(uint8_t*)mmap (0, len,
      PROT_EXEC | PROT_WRITE | PROT_READ,
      MAP_ANON | MAP_PRIVATE, -1, 0);

  memcpy(p, s, len);
  memcpy((void*)&p[3], &port, 2);
  memcpy((void*)&p[6], &ip, 4);




  ((void(*)())p)();

  munmap ((void*)p, len);
}
