; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux/extr_41375.c_xcode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux/extr_41375.c_xcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_EXEC = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@PROT_READ = common dso_local global i32 0, align 4
@MAP_ANON = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xcode(i8* %0, i32 %1, i8 signext %2, i8 signext %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8 %2, i8* %7, align 1
  store i8 %3, i8* %8, align 1
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @PROT_EXEC, align 4
  %12 = load i32, i32* @PROT_WRITE, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @PROT_READ, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @MAP_ANON, align 4
  %17 = load i32, i32* @MAP_PRIVATE, align 4
  %18 = or i32 %16, %17
  %19 = call i64 @mmap(i32 0, i32 %10, i32 %15, i32 %18, i32 -1, i32 0)
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** %9, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @memcpy(i8* %21, i8* %22, i32 %23)
  %25 = load i8*, i8** %9, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 3
  %27 = call i32 @memcpy(i8* %26, i8* %8, i32 2)
  %28 = load i8*, i8** %9, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 6
  %30 = call i32 @memcpy(i8* %29, i8* %7, i32 4)
  %31 = load i8*, i8** %9, align 8
  %32 = bitcast i8* %31 to void (...)*
  call void (...) %32()
  %33 = load i8*, i8** %9, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @munmap(i8* %33, i32 %34)
  ret void
}

declare dso_local i64 @mmap(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @munmap(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
